# libiconv-for-Windows

./: CMakeLists.txt
